<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cardView"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_icon"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/go_map"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/please_login_with_your_information" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/password_icon"
                tools:ignore="Autofill,LabelFor" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/password"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"
                tools:ignore="Autofill,LabelFor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_forgot_my_password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                app:cornerRadius="32dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:layout_gravity="center"
                android:alpha="0.7"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:ignore="UselessLeaf">

                <ImageView
                    android:contentDescription="@string/desc"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/facebook" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/github"
                    android:contentDescription="@string/desc"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>